--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<h1 class="">Photo Journal</h1>
+<div class="container d-flex flex-column">
+  <h1>Photo Journal</h1>
+  <app-new-shot-form class="col-6 align-self-center"></app-new-shot-form>
+</div>
