--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 <div class="container d-flex flex-column">
   <h1>Photo Journal</h1>
-  <app-new-shot-form class="col-6 align-self-center"></app-new-shot-form>
+  <nav>
+    <button class="btn btn-primary mx-2 flex-grow-1" (click)="loadTestData()">
+      TESTING</button
+    ><button class="btn btn-primary mx-2 flex-grow-1" (click)="clear()">
+      CLEAR
+    </button>
+  </nav>
+  <app-new-shot-form
+    class="col-10 col-md-6 align-self-center"
+  ></app-new-shot-form>
 </div>
