--- a/src/app/components/new-shot-form/new-shot-form.component.html
+++ b/src/app/components/new-shot-form/new-shot-form.component.html
@@ -5,7 +5,7 @@
       <input
         type="radio"
         formControlName="mode"
-        [value]="'m'"
+        [value]="'M'"
         class="btn-check"
         id="m"
         autocomplete="off"
@@ -15,7 +15,7 @@
       <input
         type="radio"
         formControlName="mode"
-        [value]="'p'"
+        [value]="'P'"
         class="btn-check"
         id="p"
         autocomplete="off"
@@ -25,7 +25,7 @@
       <input
         type="radio"
         formControlName="mode"
-        [value]="'s'"
+        [value]="'S'"
         class="btn-check"
         id="s"
         autocomplete="off"
@@ -35,7 +35,7 @@
       <input
         type="radio"
         formControlName="mode"
-        [value]="'a'"
+        [value]="'A'"
         class="btn-check"
         id="a"
         autocomplete="off"
@@ -110,16 +110,10 @@
     ></textarea>
   </div>
   <div class="d-flex">
-    <button
-      class="btn btn-primary mx-2 flex-grow-1"
-      (click)="newShotForm.reset()"
-    >
+    <button class="btn btn-primary mx-2 flex-grow-1" (click)="submitForm()">
       Guardar
     </button>
-    <button
-      class="btn btn-light mx-2 flex-grow-1"
-      (click)="newShotForm.reset()"
-    >
+    <button class="btn btn-light mx-2 flex-grow-1" (click)="clearForm()">
       Reset
     </button>
   </div>
