codigo refactorizado, uso de destructuracion para funciones

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
   <nav>
     <button class="btn btn-primary mx-2 flex-grow-1" (click)="loadTestData()">
       TESTING</button
-    ><button class="btn btn-primary mx-2 flex-grow-1" (click)="clear()">
-      CLEAR
+    ><button class="btn btn-primary mx-2 flex-grow-1" (click)="clearReel()">
+      CLEAR Current Reel
     </button>
   </nav>
   <app-new-shot-form
