--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container d-flex flex-column">
-  <h1>Photo Journal</h1>
+  <h1>Reeled</h1>
   <app-navbar></app-navbar>
   <router-outlet class="col-10 col-md-6 align-self-center"></router-outlet>
 </div>
